--- a/cardgame/package.json
+++ b/cardgame/package.json
@@ -2,6 +2,10 @@
   "name": "cardgame",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "8.12.1",
+    "node": "18.3.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
